--- a/tutorial_TeX/RB_DiversificationRate_Environmental_Tutorial/RB_DiversificationRate_Environmental_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Environmental_Tutorial/RB_DiversificationRate_Environmental_Tutorial_content.tex
@@ -116,11 +116,12 @@ taxa <- T.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we initialize an iterator variable for our vector of moves and monitors.
+%Additionally, we initialize an iterator variable for our vector of moves and monitors.
+Additionally, we initialize vectors for our moves and monitors.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 0
-mni = 0
+moves = VectorMoves()
+monitors = VectorMonitors()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -185,8 +186,8 @@ extinction_sd ~ dnExponential(1.0)
 We apply a simple scaling move on each prior parameter.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvScale(speciation_sd,weight=5.0)
-moves[++mvi] = mvScale(extinction_sd,weight=5.0)
+moves.append( mvScale(speciation_sd,weight=5.0) )
+moves.append( mvScale(extinction_sd,weight=5.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -204,8 +205,8 @@ beta_extinction ~ dnNormal(0,1.0)
 We apply simple sliding-window moves for the two correlation coefficients because they are defined on the whole real line.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvSlide(beta_speciation,delta=1.0,weight=10.0)
-moves[++mvi] = mvSlide(beta_extinction,delta=1.0,weight=10.0)
+moves.append( mvSlide(beta_speciation,delta=1.0,weight=10.0) )
+moves.append( mvSlide(beta_extinction,delta=1.0,weight=10.0) )
 \end{lstlisting}
 \end{snugshade*}}
 Additionally, we might be interested in the posterior probability that there is a positive correlation, $\mathbb{P}(\beta>0)$, or a negative correlation, $\mathbb{P}(\beta<0)$, respectively.
@@ -245,8 +246,8 @@ Normally we would use scaling moves but in this case we work on the log-transfor
 (If you are keen you can test the differences.)
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvSlide(log_speciation[1], weight=2)
-moves[++mvi] = mvSlide(log_extinction[1], weight=2)
+moves.append( mvSlide(log_speciation[1], weight=2) )
+moves.append( mvSlide(log_extinction[1], weight=2) )
 \end{lstlisting}
 \end{snugshade*}}
 Now we transform the diversification rate parameters into actual rates.
@@ -272,8 +273,8 @@ for (i in 1:NUM_INTERVALS) {
     log_speciation[index] ~ dnNormal( mean=expected_speciation[index], sd=speciation_sd )
     log_extinction[index] ~ dnNormal( mean=expected_extinction[index], sd=extinction_sd )
 
-    moves[++mvi] = mvSlide(log_speciation[index], weight=2)
-    moves[++mvi] = mvSlide(log_extinction[index], weight=2)
+    moves.append( mvSlide(log_speciation[index], weight=2) )
+    moves.append( mvSlide(log_extinction[index], weight=2) )
 
     speciation[index] := exp( log_speciation[index] )
     extinction[index] := exp( log_extinction[index] )
@@ -285,16 +286,16 @@ Finally, we apply moves that slide all values in the rate vectors, \IE all speci
 We will use an \cl{mvVectorSlide} move.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvVectorSlide(log_speciation, weight=10)
-moves[++mvi] = mvVectorSlide(log_extinction, weight=10)
+moves.append( mvVectorSlide(log_speciation, weight=10) )
+moves.append( mvVectorSlide(log_extinction, weight=10) )
 \end{lstlisting}
 \end{snugshade*}}
 
 Additionally, we apply a \cl{mvShrinkExpand} move which changes the spread of several variables around their mean.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvShrinkExpand( log_speciation, sd=speciation_sd, weight=10 )
-moves[++mvi] = mvShrinkExpand( log_extinction, sd=extinction_sd, weight=10 )
+moves.append( mvShrinkExpand( log_speciation, sd=speciation_sd, weight=10 ) )
+moves.append( mvShrinkExpand( log_extinction, sd=extinction_sd, weight=10 ) )
 \end{lstlisting}
 \end{snugshade*}}
 Both moves considerably improve the efficiency of our MCMC analysis.
@@ -359,7 +360,7 @@ For our MCMC analysis, we need to set up a vector of \textit{monitors} to record
 First, we will initialize the model monitor using the \cl{mnModel} function. This creates a new monitor variable that will output the states for all model parameters when passed into a MCMC function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnModel(filename="output/primates_EBD_Corr.log",printgen=10, separator = TAB)
+monitors.append( mnModel(filename="output/primates_EBD_Corr.log",printgen=10, separator = TAB) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -367,17 +368,17 @@ Additionally, we create four separate file monitors, one for each vector of spec
 We want to have the speciation and extinction rates stored separately so that we can plot them nicely afterwards.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnFile(filename="output/primates_EBD_Corr_speciation_rates.log",printgen=10, separator = TAB, speciation)
-monitors[++mni] = mnFile(filename="output/primates_EBD_Corr_speciation_times.log",printgen=10, separator = TAB, interval_times)
-monitors[++mni] = mnFile(filename="output/primates_EBD_Corr_extinction_rates.log",printgen=10, separator = TAB, extinction)
-monitors[++mni] = mnFile(filename="output/primates_EBD_Corr_extinction_times.log",printgen=10, separator = TAB, interval_times)
+monitors.append( mnFile(filename="output/primates_EBD_Corr_speciation_rates.log",printgen=10, separator = TAB, speciation) )
+monitors.append( mnFile(filename="output/primates_EBD_Corr_speciation_times.log",printgen=10, separator = TAB, interval_times) )
+monitors.append( mnFile(filename="output/primates_EBD_Corr_extinction_rates.log",printgen=10, separator = TAB, extinction) )
+monitors.append( mnFile(filename="output/primates_EBD_Corr_extinction_times.log",printgen=10, separator = TAB, interval_times) )
 \end{lstlisting}
 \end{snugshade*}}
 
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnScreen(printgen=1000, beta_speciation, beta_extinction)
+monitors.append( mnScreen(printgen=1000, beta_speciation, beta_extinction) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -497,8 +498,8 @@ beta_extinction ~ dnReversibleJumpMixture(constantValue=0.0, baseDistribution=dn
 Additionally we also need a specific move that switches if the value is equal to the constant value or drawn from the base-distribution.
 This is where we use the reversible-jump move \cl{mvRJSwitch}.
 {\tt \begin{snugshade*}
-\begin{lstlisting}moves[++mvi] = mvRJSwitch(beta_speciation, weight=5)
-moves[++mvi] = mvRJSwitch(beta_extinction, weight=5)
+\begin{lstlisting}moves.append( mvRJSwitch(beta_speciation, weight=5) )
+moves.append( mvRJSwitch(beta_extinction, weight=5) )
 \end{lstlisting}
 \end{snugshade*}}
 Now we can also monitor for convenience what the probability of \cl{beta\_speciation} and \cl{beta\_extinction} being 0.0 is.
