--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content.tex
@@ -145,11 +145,12 @@ taxa <- data.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we will create some move and monitor index variables to create our move and monitor vectors.
+%Additionally, we will create some move and monitor index variables to create our move and monitor vectors.
+Additionally, we will create some vectors for our moves and monitors.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 0
-mni = 0
+moves = VectorMoves()
+monitors = VectorMonitors()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -169,8 +170,8 @@ and assign its moves
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvBetaSimplex(er, alpha=10, tune=true, weight=3) 
-moves[++mvi] = mvDirichletSimplex(er, alpha=10.0, tune=true, weight=1.0)
+moves.append( mvBetaSimplex(er, alpha=10, tune=true, weight=3)  )
+moves.append( mvDirichletSimplex(er, alpha=10.0, tune=true, weight=1.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -188,8 +189,8 @@ Now add the simplex scale move on the stationary frequencies to the moves vector
 
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvBetaSimplex(pi, alpha=10, tune=true, weight=2) 
-moves[++mvi] = mvDirichletSimplex(pi, alpha=10.0, tune=true, weight=1.0)
+moves.append( mvBetaSimplex(pi, alpha=10, tune=true, weight=2)  )
+moves.append( mvDirichletSimplex(pi, alpha=10.0, tune=true, weight=1.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -241,7 +242,7 @@ We will apply a simple scale move to this parameter.
 The scale move's tuning parameter is called \cl{lambda} and this value dictates the size of the proposal.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvScale(alpha, lambda=0.1, tune=false, weight=4.0)
+moves.append( mvScale(alpha, lambda=0.1, tune=false, weight=4.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -253,8 +254,8 @@ Here, we give the probability of a site being invariant with \cl{pinvar}
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 pinvar ~ dnBeta(1,1)
-moves[++mvi] = mvScale(pinvar, lambda=0.1, tune=false, weight=2.0)
-moves[++mvi] = mvSlide(pinvar, delta=10.0, tune=false, weight=2.0)
+moves.append( mvScale(pinvar, lambda=0.1, tune=false, weight=2.0) )
+moves.append( mvSlide(pinvar, delta=10.0, tune=false, weight=2.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -282,8 +283,8 @@ To update the unrooted tree topology, we can use both a nearest-neighbor interch
 These moves do not have tuning parameters associated with them, thus you only need to pass in the \cl{topology} node and proposal \cl{weight}. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvNNI(topology, weight=1.0)
-moves[++mvi] = mvSPR(topology, weight=1.0)
+moves.append( mvNNI(topology, weight=1.0) )
+moves.append( mvSPR(topology, weight=1.0) )
 \end{lstlisting}
 \end{snugshade*}}
 The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
@@ -297,7 +298,7 @@ Copy this entire block of \Rev~code into the console:
 \begin{lstlisting}
 for (i in 1:n_branches) {
    br_lens[i] ~ dnExponential(10.0)
-   moves[++mvi] = mvScale(br_lens[i]) 
+   moves.append( mvScale(br_lens[i])  )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -358,7 +359,7 @@ The monitor functions are all called \cl{mn*}, where \cl{*} is the wildcard repr
 First, we will initialize the model monitor using the \cl{mnModel} function. This creates a new monitor variable that will output the states for all model parameters when passed into a MCMC function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnModel(filename="output/PS_uniform.log",printgen=10)
+monitors.append( mnModel(filename="output/PS_uniform.log",printgen=10) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -366,14 +367,14 @@ The \cl{mnFile} monitor will record the states for only the parameters passed in
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnFile(psi, filename="output/PS_uniform.trees", printgen=10)
+monitors.append( mnFile(psi, filename="output/PS_uniform.trees", printgen=10) )
 \end{lstlisting}
 \end{snugshade*}}
 
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnScreen(alpha, pinvar, TL, printgen=1000)
+monitors.append( mnScreen(alpha, pinvar, TL, printgen=1000) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -474,8 +475,8 @@ n_branches <- 2 * n_species - 3
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 0 
-mni = 0
+moves = VectorMoves() 
+monitors = VectorMonitors()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -494,7 +495,7 @@ First, we will create the GTR rate matrix for partition $i$ by first creating ex
 for (i in 1:n_data_subsets) {
   er_prior[i] <- v(1,1,1,1,1,1)
   er[i] ~ dnDirichlet(er_prior[i])
-  moves[++mvi] = mvBetaSimplex(er[i], alpha=10, tune=true, weight=3) 
+  moves.append( mvBetaSimplex(er[i], alpha=10, tune=true, weight=3)  )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -506,7 +507,7 @@ and stationary frequencies
 for (i in 1:n_data_subsets) {
   pi_prior[i] <- v(1,1,1,1)
   pi[i] ~ dnDirichlet(pi_prior[i])
-  moves[++mvi] = mvBetaSimplex(pi[i], alpha=10, tune=true, weight=2)
+  moves.append( mvBetaSimplex(pi[i], alpha=10, tune=true, weight=2) )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -532,7 +533,7 @@ for (i in 1:n_data_subsets) {
     alpha[i] ~ dnLognormal( alpha_prior_mean[i], alpha_prior_sd[i] )
     gamma_rates[i] := fnDiscretizeGamma( alpha[i], alpha[i], 4, false )
 
-    moves[++mvi] = mvScale(alpha[i],weight=2)
+    moves.append( mvScale(alpha[i],weight=2) )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -543,8 +544,8 @@ the $+I$ invariant sites model
 \begin{lstlisting}
 for (i in 1:n_data_subsets) {
   pinvar[i] ~ dnBeta(1,1)
-  moves[++mvi] = mvScale(pinvar[i], lambda=0.1, tune=true, weight=2.0)
-  moves[++mvi] = mvSlide(pinvar[i], delta=0.1, tune=true, weight=2.0)
+  moves.append( mvScale(pinvar[i], lambda=0.1, tune=true, weight=2.0) )
+  moves.append( mvSlide(pinvar[i], delta=0.1, tune=true, weight=2.0) )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -554,8 +555,8 @@ and the per-partition substitution rate multipliers
 \begin{lstlisting}
 # specify a rate multiplier for each partition
 part_rate_mult ~ dnDirichlet( rep(1.0, n_data_subsets) )
-moves[++mvi] = mvBetaSimplex(part_rate_mult, alpha=1.0, tune=true, weight=n_data_subsets)
-moves[++mvi] = mvDirichletSimplex(part_rate_mult, alpha=1.0, tune=true, weight=2.0)
+moves.append( mvBetaSimplex(part_rate_mult, alpha=1.0, tune=true, weight=n_data_subsets) )
+moves.append( mvDirichletSimplex(part_rate_mult, alpha=1.0, tune=true, weight=2.0) )
 
 # note that we use here a vector multiplication, 
 # i.e., multiplying each element of part_rate_mult by n_data_subsets
@@ -585,14 +586,14 @@ pi_prior <- v(1,1,1,1)
 pi ~ dnDirichlet(pi_prior)
 
 # specify a move to propose updates to on pi
-moves[++mvi] = mvBetaSimplex(pi, weight=2)
-moves[++mvi] = mvDirichletSimplex(pi, weight=1)
+moves.append( mvBetaSimplex(pi, weight=2) )
+moves.append( mvDirichletSimplex(pi, weight=1) )
 
 # specify a lognormal distribution as the prior distribution on kappa
 kappa ~ dnLognormal(0.0,1.25)
 
 # a simple scaling move to update kappa
-moves[++mvi] = mvScale(kappa)
+moves.append( mvScale(kappa) )
 
 # Finally, create the HKY rate matrix
 Q[2] := fnHKY(kappa,pi)
@@ -615,13 +616,13 @@ Hence, we need to specify a random variable for our tree parameter which is the 
 out_group = clade("Galeopterus_variegatus")
 # Prior distribution on the tree topology	
 topology ~ dnUniformTopology(taxa, outgroup=out_group)
-moves[++mvi] = mvNNI(topology, weight=5.0)
-moves[++mvi] = mvSPR(topology, weight=1.0)
+moves.append( mvNNI(topology, weight=5.0) )
+moves.append( mvSPR(topology, weight=1.0) )
 
 # Branch length prior
 for (i in 1:n_branches) {
     bl[i] ~ dnExponential(10.0)
-	moves[++mvi] = mvScale(bl[i])
+	moves.append( mvScale(bl[i]) )
 }
 
 TL := sum(bl)
@@ -660,9 +661,9 @@ create the monitors
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[++mni] = mnModel(filename="output/PS_gene.log",printgen=10)
-monitors[++mni] = mnFile(psi, filename="output/PS_gene.trees", printgen=100)
-monitors[++mni] = mnScreen(TL, printgen=1000)
+monitors.append( mnModel(filename="output/PS_gene.log",printgen=10) )
+monitors.append( mnFile(psi, filename="output/PS_gene.trees", printgen=100) )
+monitors.append( mnScreen(TL, printgen=1000) )
 \end{lstlisting}
 \end{snugshade*}}
 
