--- a/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial_content.tex
@@ -105,7 +105,7 @@ Lastly, create index variables to populate our move and monitor vectors,
 
 \begin{snugshade}
 \begin{lstlisting}
-mi = 0
+moves = VectorMoves()
 \end{lstlisting}
 \end{snugshade}
 
@@ -136,7 +136,7 @@ First, create a biogeographical clock to scale the rate of range evolution.
 \begin{snugshade}
 \begin{lstlisting}
 clock_bg ~ dnExponential(10)
-moves[++mvi] = mvScale(clock_bg, lambda=0.5, weight=5.0)
+moves.append( mvScale(clock_bg, lambda=0.5, weight=5.0) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -145,7 +145,7 @@ Next, instantiate a simplex of gain and loss rates, distributed by a flat Dirich
 \begin{snugshade}
 \begin{lstlisting}
 glr ~ dnDirichlet([1,1])
-moves[++mvi] = mvSimplexElementScale(glr, alpha=30.0, weight=5.0)
+moves.append( mvSimplexElementScale(glr, alpha=30.0, weight=5.0) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -174,7 +174,7 @@ We'll use an exponential distribution with mean 1.0 as a prior for {\tt dp}.
 \begin{snugshade}
 \begin{lstlisting}
 dp ~ dnExponential(10.0)
-moves[++mvi] = mvScale(x=dp, lambda=0.5, tune=true, weight=5.0)
+moves.append( mvScale(x=dp, lambda=0.5, tune=true, weight=5.0) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -207,7 +207,7 @@ clado_prob ~ dnDirichlet( [1, 1, 1] )
 widespread_sympatry := clado_prob[1]
 subset_sympatry     := clado_prob[2]
 allopatry           := clado_prob[3]
-moves[++mvi] = mvSimplexElementScale(clado_prob, alpha=20.0, weight=5.0)
+moves.append( mvSimplexElementScale(clado_prob, alpha=20.0, weight=5.0) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -251,10 +251,10 @@ Let's create the character history moves as follows: conservative character hist
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
-          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5)
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
-          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes)
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
+          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5) )
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.05, 
+          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -262,10 +262,10 @@ and the same proposals for moderately-sized character history updates, with {\tt
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.2, 
-          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5)
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.2, 
-          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes)
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.2, 
+          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5) )
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=0.2, 
+          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes) )
 \end{lstlisting}
 \end{snugshade}
 
@@ -273,10 +273,10 @@ and radical updates
 
 \begin{snugshade}
 \begin{lstlisting}
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
-          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5)
-moves[++mvi] = mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
-          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes)
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
+          type="Biogeo", graph="node", proposal="rejection", weight=n_nodes*5) )
+moves.append( mvCharacterHistory(ctmc=m, qmap=q_range, tree=psi, lambda=1.0, 
+          type="Biogeo", graph="branch", proposal="rejection", weight=n_nodes) )
 \end{lstlisting}
 \end{snugshade}
 
