--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -163,18 +163,20 @@ taxa <- data.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we set up a counter variable for the number of moves that we already added to our analysis.
+%Additionally, we set up a counter variable for the number of moves that we already added to our analysis.
+Additionally, we set up a vector for the moves in our analysis.
 [Recall that moves are algorithms used to propose new parameter values during the MCMC simulation.]
 This will make it much easier if we extend the model or analysis to include additional moves or to remove some moves.
-Similarly, we set up a counter variable for the number of monitors. 
+%Similarly, we set up a counter variable for the number of monitors. 
+Similarly, we set up a vector for the monitors. 
 [Monitors print the values of model parameters to the screen and/or log files during the MCMC analysis].
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 1 
-mni = 1
+moves = VectorMoves() 
+monitors = VectorMonitors()
 \end{lstlisting}
 \end{snugshade*}}
-You may have noticed that we used the \cl{=} operator to create the move index.
+You may have noticed that we used the \cl{=} operator to create the vector. %the move index.
 This simply means that the variable is not part of the model.
 You will later see that we use this operator more often, \EG when we create moves and monitors.
 
@@ -227,8 +229,8 @@ In the case of our unrooted tree topology, for example, we can use both a neares
 These moves do not have tuning parameters associated with them, thus you only need to pass in the \cl{topology} node and proposal \cl{weight}. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvNNI(topology, weight=1.0)
-moves[mvi++] = mvSPR(topology, weight=1.0)
+moves.append( mvNNI(topology, weight=1.0) )
+moves.append( mvSPR(topology, weight=1.0) )
 \end{lstlisting}
 \end{snugshade*}}
 The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
@@ -242,7 +244,7 @@ Copy this entire block of \Rev~code into the console:
 \begin{lstlisting}
 for (i in 1:n_branches) {
    br_lens[i] ~ dnExponential(10.0)
-   moves[mvi++] = mvScale(br_lens[i]) 
+   moves.append( mvScale(br_lens[i])  )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -265,12 +267,12 @@ For example, we can use instead a specific gamma prior distribution (or any othe
 \begin{lstlisting}
 # specify a prior distribution on the tree length with your desired mean
 TL ~ dnGamma(2,4)
-moves[mvi++] = mvScale(TL) 
+moves.append( mvScale(TL)  )
 
 # now create a random variable for the relative branch lengths
 rel_branch_lengths ~ dnDirichlet( rep(1.0,n_branches) )
-moves[mvi++] = mvBetaSimplex(rel_branch_lengths, weight=n_branches)
-moves[mvi++] = mvDirichletSimplex(rel_branch_lengths, weight=n_branches/10.0)
+moves.append( mvBetaSimplex(rel_branch_lengths, weight=n_branches) )
+moves.append( mvDirichletSimplex(rel_branch_lengths, weight=n_branches/10.0) )
 
 # finally, transform the relative branch lengths into actual branch lengths
 br_lens := rel_branch_lengths * TL
@@ -322,12 +324,12 @@ We also need moves that change the ages of the internal nodes, for example, \cl{
 These moves do not have tuning parameters associated with them, thus you only need to pass in the \cl{psi} node and proposal \cl{weight}. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvNarrow(psi, weight=5.0)
-moves[mvi++] = mvNNI(psi, weight=1.0)
-moves[mvi++] = mvFNPR(psi, weight=3.0)
-moves[mvi++] = mvGPR(psi, weight=3.0)
-moves[mvi++] = mvSubtreeScale(psi, weight=3.0)
-moves[mvi++] = mvNodeTimeSlideUniform(psi, weight=15.0)
+moves.append( mvNarrow(psi, weight=5.0) )
+moves.append( mvNNI(psi, weight=1.0) )
+moves.append( mvFNPR(psi, weight=3.0) )
+moves.append( mvGPR(psi, weight=3.0) )
+moves.append( mvSubtreeScale(psi, weight=3.0) )
+moves.append( mvNodeTimeSlideUniform(psi, weight=15.0) )
 \end{lstlisting}
 \end{snugshade*}}
 The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
@@ -343,7 +345,7 @@ This specifies our lack of prior knowledge on the magnitude of the clock rate.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 log_clock_rate ~ dnUniform(-6,1)
-moves[mvi++] = mvSlide(log_clock_rate, weight=2.0)
+moves.append( mvSlide(log_clock_rate, weight=2.0) )
 clock_rate := 10^log_clock_rate
 \end{lstlisting}
 \end{snugshade*}}
@@ -412,7 +414,7 @@ The monitor functions are all called \cl{mn*}, where \cl{*} is the wildcard repr
 First, we will initialize the model monitor using the \cl{mnModel} function. This creates a new monitor variable that will output the states for all model parameters when passed into a MCMC function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[mni++] = mnModel(filename="output/primates_cytb_JC.log", printgen=10)
+monitors.append( mnModel(filename="output/primates_cytb_JC.log", printgen=10) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -420,7 +422,7 @@ The \cl{mnFile} monitor will record the states for only the parameters passed in
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[mni++] = mnFile(filename="output/primates_cytb_JC.trees", printgen=10, psi)
+monitors.append( mnFile(filename="output/primates_cytb_JC.trees", printgen=10, psi) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -428,7 +430,7 @@ monitors[mni++] = mnFile(filename="output/primates_cytb_JC.trees", printgen=10, 
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[mni++] = mnScreen(printgen=1000, TL)
+monitors.append( mnScreen(printgen=1000, TL) )
 \end{lstlisting}
 \end{snugshade*}}
 This monitor mostly helps us to see the progress of the MCMC run.
@@ -627,8 +629,8 @@ A good move on variables drawn from a Dirichlet distribution is the \cl{mvBetaSi
 This move randomly takes an element from the simplex, proposes a new value for it drawn from a Beta distribution, and then rescales all values of the simplex to sum to 1 again.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvBetaSimplex(pi, weight=2)
-moves[mvi++] = mvDirichletSimplex(pi, weight=1)
+moves.append( mvBetaSimplex(pi, weight=2) )
+moves.append( mvDirichletSimplex(pi, weight=1) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -643,7 +645,7 @@ Again, we need to specify a move for this new stochastic variable.
 A simple scaling move should do the job.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvScale(kappa)
+moves.append( mvScale(kappa) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -751,8 +753,8 @@ The Dirichlet prior on our parameter \cl{er} creates a \href{http://en.wikipedia
 
 {\tt\small \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvBetaSimplex(er, weight=3)
-moves[mvi++] = mvDirichletSimplex(er, weight=1)
+moves.append( mvBetaSimplex(er, weight=3) )
+moves.append( mvDirichletSimplex(er, weight=1) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -769,8 +771,8 @@ The node \cl{pi} represents the $\pi$ node in Figure \ref{fig:gtr}.
 Now add the simplex scale move on the stationary frequencies to the moves vector:
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvBetaSimplex(pi, weight=2)
-moves[mvi++] = mvDirichletSimplex(pi, weight=1)
+moves.append( mvBetaSimplex(pi, weight=2) )
+moves.append( mvDirichletSimplex(pi, weight=1) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -875,7 +877,7 @@ The random variable that controls the rate variation is the stochastic node \cl{
 We will apply a simple scale move to this parameter.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvScale(alpha, weight=2.0)
+moves.append( mvScale(alpha, weight=2.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -933,7 +935,7 @@ The \cl{Beta(1,1)} distribution is a flat prior distribution that specifies equa
 Then, as usual, we add a move to change this stochastic variable; we'll used a simple sliding window move.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mvi++] = mvSlide(pinvar)
+moves.append( mvSlide(pinvar) )
 \end{lstlisting}
 \end{snugshade*}}
 
