--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_2_content.tex
@@ -127,10 +127,10 @@ rho ~ dnExponential(10.0)
 Add MCMC moves for each of the rates. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 1
-moves[mvi++] = mvScale(gamma, lambda=1, weight=1)
-moves[mvi++] = mvScale(delta, lambda=1, weight=1)
-moves[mvi++] = mvScale(rho, lambda=1, weight=1)
+moves = VectorMoves()
+moves.append( mvScale(gamma, lambda=1, weight=1) )
+moves.append( mvScale(delta, lambda=1, weight=1) )
+moves.append( mvScale(rho, lambda=1, weight=1) )
 \end{lstlisting}
 \end{snugshade*}}
 
