--- a/tutorial_TeX/RB_ClockModels_Tutorial/RB_ClockModels_Tutorial_content.tex
+++ b/tutorial_TeX/RB_ClockModels_Tutorial/RB_ClockModels_Tutorial_content.tex
@@ -124,10 +124,10 @@ taxa <- T.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-%And our move-index iterator.
+%create a vector for the monitors.
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
-%mi = 1
+%moves = VectorMoves()
 %\end{lstlisting}
 %\end{snugshade*}}
 
@@ -147,7 +147,7 @@ Diversification ($d$) is the speciation rate ($\lambda$) minus the extinction ra
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 diversification ~ dnExponential(10.0) 
-moves[mi++] = mvScale(diversification,lambda=1.0,tune=true,weight=3.0)
+moves.append( mvScale(diversification,lambda=1.0,tune=true,weight=3.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -157,7 +157,7 @@ Turnover is: $r = \mu / \lambda$.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 turnover ~ dnBeta(2.0, 2.0) 
-moves[mi++] = mvSlide(turnover,delta=1.0,tune=true,weight=3.0)
+moves.append( mvSlide(turnover,delta=1.0,tune=true,weight=3.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -284,19 +284,19 @@ tmrca_Ursidae := tmrca(timetree,clade_Ursidae)
 Next, create the vector of moves. These tree moves act on node ages:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mi++] = mvNodeTimeSlideUniform(timetree, weight=30.0)
-moves[mi++] = mvSlide(root_time, delta=2.0, tune=true, weight=10.0)
-moves[mi++] = mvScale(root_time, lambda=2.0, tune=true, weight=10.0)
-moves[mi++] = mvTreeScale(tree=timetree, rootAge=root_time, delta=1.0, tune=true, weight=3.0)
+moves.append( mvNodeTimeSlideUniform(timetree, weight=30.0) )
+moves.append( mvSlide(root_time, delta=2.0, tune=true, weight=10.0) )
+moves.append( mvScale(root_time, lambda=2.0, tune=true, weight=10.0) )
+moves.append( mvTreeScale(tree=timetree, rootAge=root_time, delta=1.0, tune=true, weight=3.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
 Then, we will add moves that will propose changes to the tree topology. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mi++] = mvNNI(timetree, weight=8.0)
-moves[mi++] = mvNarrow(timetree, weight=8.0)
-moves[mi++] = mvFNPR(timetree, weight=8.0)
+moves.append( mvNNI(timetree, weight=8.0) )
+moves.append( mvNarrow(timetree, weight=8.0) )
+moves.append( mvFNPR(timetree, weight=8.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -344,7 +344,7 @@ Enter the \Rev~code provided in this section in the new model file. Keep in mind
 %br_s <- 0.05
 %br_mu <- ln(br_M) - ((br_s * br_s) * 0.5)
 %base_rate ~ dnLnorm(br_mu, br_s)
-%moves[mi++] = mvScale(base_rate,lambda=0.25,tune=true,weight=5.0)
+%moves.append( mvScale(base_rate,lambda=0.25,tune=true,weight=5.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 
@@ -352,7 +352,7 @@ The clock-rate parameter is a stochastic node from a gamma distribution.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 clock_rate ~ dnGamma(2.0,4.0)
-moves[mi++] = mvScale(clock_rate,lambda=0.5,tune=true,weight=5.0)
+moves.append( mvScale(clock_rate,lambda=0.5,tune=true,weight=5.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -371,8 +371,8 @@ Specify the parameters of the GTR model and the moves to operate on them.
 sf ~ dnDirichlet(v(1,1,1,1))
 er ~ dnDirichlet(v(1,1,1,1,1,1))
 Q := fnGTR(er,sf)
-moves[mi++] = mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0)
-moves[mi++] = mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0)
+moves.append( mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0) )
+moves.append( mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -416,7 +416,7 @@ Open your text editor and create the marginal-likelihood analysis file under the
 \begin{lstlisting}
 D <- readDiscreteCharacterData(file="data/bears_irbp.nex")
 n_sites <- D.nchar()
-mi = 1
+moves = VectorMoves()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -527,7 +527,7 @@ In Figure \ref{m_UCLN:fig}, we can represent the vector of $N$ branch rates usin
 %\begin{lstlisting}
 %D <- readDiscreteCharacterData(file="data/bears_irbp.nex")
 %n_sites <- D.nchar(1)
-%mi = 1
+%moves = VectorMoves()
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -555,7 +555,7 @@ Enter the \Rev~code provided in this section in the new model file. Keep in mind
 %br_s <- 0.05
 %br_mu <- ln(br_M) - ((br_s * br_s) * 0.5)
 %base_rate ~ dnLnorm(br_mu, br_s)
-%moves[mi++] = mvScale(base_rate,lambda=0.25,tune=true,weight=5.0)
+%moves.append( mvScale(base_rate,lambda=0.25,tune=true,weight=5.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 
@@ -594,8 +594,8 @@ ucln_mu := ln(ucln_mean) - (ucln_var * 0.5)
 The only stochastic nodes we need to operate on for this part of the model are the lognormal mean ($M$ or \cl{ucln\_mean}) and the standard deviation ($\sigma$ or \cl{ucln\_sigma}).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mi++] = mvScale(ucln_mean, lambda=1.0, tune=true, weight=4.0)
-moves[mi++] = mvScale(ucln_sigma, lambda=0.5, tune=true, weight=4.0)
+moves.append( mvScale(ucln_mean, lambda=1.0, tune=true, weight=4.0) )
+moves.append( mvScale(ucln_sigma, lambda=0.5, tune=true, weight=4.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -605,7 +605,7 @@ Within this loop, we also add the move for each branch-rate stochastic node to o
 \begin{lstlisting}
 for(i in 1:n_branches){
    branch_rates[i] ~ dnLnorm(ucln_mu, ucln_sigma)
-   moves[mi++] = mvScale(branch_rates[i], lambda=1, tune=true, weight=2.)
+   moves.append( mvScale(branch_rates[i], lambda=1, tune=true, weight=2.) )
 }
 \end{lstlisting}
 \end{snugshade*}}
@@ -624,8 +624,8 @@ Because we are dealing with semi-identifiable parameters, it often helps to appl
 Here we will add 2 additional types of moves that act on vectors.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[mi++] = mvVectorScale(branch_rates,lambda=1.0,tune=true,weight=2.0) 
-moves[mi++] = mvVectorSingleElementScale(branch_rates,lambda=30.0,tune=true,weight=1.0) 
+moves.append( mvVectorScale(branch_rates,lambda=1.0,tune=true,weight=2.0)  )
+moves.append( mvVectorSingleElementScale(branch_rates,lambda=30.0,tune=true,weight=1.0)  )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -651,8 +651,8 @@ Now, specify the stationary frequencies and exchangeability rates of the GTR mat
 sf ~ dnDirichlet(v(1,1,1,1))
 er ~ dnDirichlet(v(1,1,1,1,1,1))
 Q := fnGTR(er,sf)
-moves[mi++] = mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0)
-moves[mi++] = mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0)
+moves.append( mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0) )
+moves.append( mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0) )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -726,7 +726,7 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %br_s <- 0.05
 %br_mu <- ln(br_M) - ((br_s * br_s) * 0.5)
 %base_rate ~ dnLnorm(br_mu, br_s)
-%moves[mi++] = mvScale(base_rate,lambda=0.25,tune=true,weight=5.0)
+%moves.append( mvScale(base_rate,lambda=0.25,tune=true,weight=5.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -740,7 +740,7 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
 %nu ~ dnExponential(1.0)
-%moves[mi++] = mvScale(nu, lambda=0.5, tune=true, weight=4.0)
+%moves.append( mvScale(nu, lambda=0.5, tune=true, weight=4.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -749,7 +749,7 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
 %root_rate ~ dnGamma(2.0, 4.0)
-%moves[mi++] = mvScale(root_rate, lambda=0.5, tune=true, weight=4.0)
+%moves.append( mvScale(root_rate, lambda=0.5, tune=true, weight=4.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -790,9 +790,9 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %Additionally, we can also add a move that is retuned so that the proposal size is optimal for the average node rate. 
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
-%moves[mi++] = mvScaleSingleACLNRates(node_rates, 4.0, false, n_branches)
-%moves[mi++] = mvScaleSingleACLNRates(node_rates, 2.0, false, n_branches)
-%moves[mi++] = mvScaleSingleACLNRates(node_rates, 3.0, true, 3* n_branches)
+%moves.append( mvScaleSingleACLNRates(node_rates, 4.0, false, n_branches) )
+%moves.append( mvScaleSingleACLNRates(node_rates, 2.0, false, n_branches) )
+%moves.append( mvScaleSingleACLNRates(node_rates, 3.0, true, 3* n_branches) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -801,7 +801,7 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %This type of proposal can help your chain more efficiently sample parameter space without requiring costly recalculations of the model likelihood.
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
-%moves[mi++] = mvACLNMixingStep(timetree, node_rates, root_rate, 0.5, false, n_branches)
+%moves.append( mvACLNMixingStep(timetree, node_rates, root_rate, 0.5, false, n_branches) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -813,8 +813,8 @@ Once you have completed this analysis, record the marginal likelihoods under the
 %sf ~ dnDirichlet(v(1,1,1,1))
 %er ~ dnDirichlet(v(1,1,1,1,1,1))
 %Q := fnGTR(er,sf)
-%moves[mi++] = mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0)
-%moves[mi++] = mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0)
+%moves.append( mvSimplexElementScale(er, alpha=10.0, tune=true, weight=3.0) )
+%moves.append( mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
@@ -946,8 +946,8 @@ D <- readDiscreteCharacterData(file="data/bears_irbp.nex")
 ### get helpful variables from the data
 n_sites <- D.nchar(1)
 
-### initialize an iterator for the moves vector
-mi = 1
+### create a vector for the moves
+moves = VectorMoves()
 \end{lstlisting}
 \end{snugshade*}}
 
