--- a/tutorial_TeX/RB_DiscreteMorphology_TreeInference_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
+++ b/tutorial_TeX/RB_DiscreteMorphology_TreeInference_Tutorial/RB_DiscreteMorphology_Tutorial_results_content.tex
@@ -150,12 +150,12 @@ In this case, our tree estimate appears to be robust to model complexity.
 %
 %{\tt \begin{snugshade*}
 %\begin{lstlisting}
-%monitors[mni++] = mnJointConditionalAncestralState(tree=phylogeny,
+%monitors.append( mnJointConditionalAncestralState(tree=phylogeny,
 %                                                   ctmc=phyMorpho,
 %                                                   filename="output/simple.states.txt",
 %                                                   type="Standard",
 %                                                   printgen=10,
-%                                                   withTips=false)
+%                                                   withTips=false) )
 %\end{lstlisting}
 %\end{snugshade*}}
 %
